syntax = "proto3";
option java_package = "grpc";

message operateTradeSessionRequest{
  string request = 1;
  string email = 2;
}
message operateTradeSessionResponse{
  string response = 1;
  int32 status = 2;
}
message operateTradeRequest{
  string request = 1;
  string email = 2;
}
message operateTradeResponse{
  string response = 1;
  int32 status = 2;
}
message tradeOperationListRequest{
  string request = 1;
  string email = 2;
}
message tradeOperationListResponse{
  string response = 1;
  int32 status = 2;
}
service TradeService{
  rpc operateTradeSession(operateTradeSessionRequest) returns(operateTradeSessionResponse);
  rpc operateTrade(operateTradeRequest) returns(operateTradeResponse);
  rpc tradeOperationList(tradeOperationListRequest) returns(tradeOperationListResponse);
}